src/objects/ACCC_Log_Event__e.object
<CustomObject>
    <description>Log Events generally capture information regarding SObjectcs. It provides a way to have audits of transactions (CDC) so that one may have history of the flow of information. Note, the &apos;Publish Behavior&apos; is &apos;Immediately&apos;. This is to ensure ANY action is NOT based on the atomic attribute of the transaction scope.</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Action should correlate to : Create, Update,Delete, Undelete (if an object operation)</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date time of the event</description>
        <label>DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>If any exception is known</description>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>An external Id of the main object, if known;otherwise, null or empty</description>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageId__c</fullName>
        <description>Message Id</description>
        <label>MessageId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object Name</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>The JSON payload</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number__c</fullName>
        <label>Total Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <description>Transaction Id</description>
        <label>TransactionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User id of the originator (not the created by)</description>
        <label>UserId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>&apos;1.0.0.0&apos;</defaultValue>
        <description>Version of the message event</description>
        <label>Version</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ACCC Log Event</label>
    <pluralLabel>ACCC Log Events</pluralLabel>
</CustomObject>